--- a/src/Pokecard.css
+++ b/src/Pokecard.css
@@ -11,5 +11,32 @@
 }
 
 .Pokecard-data{
-    
+    font-size:80%;
+}
+
+.Pokecard-title{
+    margin-bottom: 1rem;
+    font-weight: bold;
+    font-size:1.5rem;
+}
+
+.Pokecard-image{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    height:250px;
+    background-color: #eceff1;
+    margin-bottom: 1rem;
+
+}
+
+.Pokecard img{
+    transition: all ease 500ms;
+
+}
+
+.Pokecard img:hover{
+    transform:scale(1.25);
+    opacity: 0.7;
+
 }
